<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.TrackingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/jost"
            android:gravity="center_horizontal"
            android:text="@string/tracking"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/bg_tracking"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_sleep"
            android:paddingTop="10dp"
            android:src="@drawable/logo_tracking" />

    </LinearLayout>

    <!-- Title Text -->

    <!-- Subtitle Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter"
        android:text="@string/face_recognition"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/tracking_description"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <!-- Button -->

    <Button
        android:id="@+id/btn_start"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/get_start"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>
