<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@drawable/bg_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/jost"
        android:text="@string/face_recognition"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/faceImageView"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="@drawable/alarm_shape"
        android:src="@drawable/img_default" />

    <!-- Tombol Retake dan Use -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/bottom_nav"
        android:layout_marginTop="110dp"
        android:gravity="center_vertical|center">

        <!-- Tombol Retake -->
        <Button
            android:id="@+id/retakeButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/retake"
            android:textColor="#072359"
            android:fontFamily="@font/inter"
            android:background="@drawable/button_retake"
             />

        <!-- Tombol Use -->
        <Button
            android:id="@+id/useButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/use"
            android:fontFamily="@font/inter"
            android:layout_marginStart="20dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_use" />
    </LinearLayout>
</LinearLayout>
