<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.LoginActivity"
    android:padding="16sp">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"
            android:layout_marginEnd="16dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

    <!-- Email Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/input_field_background"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_email"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/ed_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:minHeight="48dp"
            android:padding="0dp"
            android:hint="@string/ed_email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <!-- Password Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/input_field_background"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edt_password"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="0dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="8dp"
            android:text="Show"
            android:textColor="@color/gray" />
    </LinearLayout>
</LinearLayout>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Sign_up"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:textColor="@color/txt"
        android:fontFamily="@font/inter_semibold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="14sp" />
</LinearLayout>