<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    android:padding="16dp"
    android:fillViewport="true"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="start">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jost"
                android:gravity="center_horizontal"
                android:text="@string/tracking"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>
        <!-- Input Fields -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/gender_categories_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:minHeight="48dp"
            android:padding="12dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/age_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:hint="@string/type_here"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sleep Duration (Per hours)"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/sleep_duration_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:hint="@string/type_here"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Physical Activity (per minutes)"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/physical_activity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:hint="@string/type_here"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stress Level (Scale 1-10)"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/stress_level_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:hint="@string/type_here"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <!-- Dropdowns -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BMI Category"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/bmi_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:minHeight="48dp"
            android:padding="12dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Heart Rate (Beats per minutes)"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/heart_rate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:hint="@string/type_here"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily Steps"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/daily_steps_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_here"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sleep Disorder"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/sleep_disorder_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="24dp" />
        <!-- Submit Button -->
        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/see_result"
            android:background="@drawable/btn_results"
            android:textColor="@color/white"
            android:padding="12dp"
            android:fontFamily="@font/jost_bold"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
